we got us some ai

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
   <body onload="init()">
     <canvas id="game-canvas"></canvas>
     <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/2.1.1/pixi.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
     <script src="/js/hippos.js"></script>
   </body>
 </html>
