--- a/game.html
+++ b/game.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
   </head>
   <body onload="init()">
-    <canvas id="game-canvas"></canvas>
+    <canvas id="viewport"></canvas>
     <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/2.1.1/pixi.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
-    <script src="/js/hippos.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/socket.js"></script>
+    <script src="/js/key.js"></script>
+    <script src="/js/hippo.js"></script>
+    <script src="/js/game.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
