--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
     <canvas id="viewport"></canvas>
     <script src="//cdnjs.cloudflare.com/ajax/libs/pixi.js/2.1.1/pixi.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/p2.js/0.6.0/p2.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/socket.js"></script>
     <script src="/js/key.js"></script>
